fix: graphic gap match: touch devices: don't leave hover style after placed dragstop

--- a/views/scss/qti/_graphic-gap.scss
+++ b/views/scss/qti/_graphic-gap.scss
@@ -150,13 +150,15 @@
         }
     }
 
-    .placed-fillers:not(.selectable) .qti-gapImg.placed:not(.dragged):hover {
-        &:after {
-            opacity: 1;
-        }
-        &:before {
-            @include gapimg-icon;
-            @include icon-result-nok;
+    @media (hover: hover) {
+        .placed-fillers:not(.selectable) .qti-gapImg.placed:not(.dragged):not(.no-hover):hover {
+            &:after {
+                opacity: 1;
+            }
+            &:before {
+                @include gapimg-icon;
+                @include icon-result-nok;
+            }
         }
     }
 
